--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -1,37 +1,52 @@
 {
-    "Projects": [
-      {
-        "id": 1,
-        "title": "Music School",
-        "slug": "music-school",
-        "description": "Front-end App built with Next.js, Tailwind CSS, TypeScript and shadCN components.",
-        "image": "/projects/music-school.png",
-        "link": "https://music-school-by-faizan.vercel.app/"
-      },
-      {
-        "id": 2,
-        "title": "Anonymous",
-        "slug": "anonymous",
-        "description": "Full Stack Web App built with Next.js, Tailwind CSS, TypeScript and MongoDB.",
-        "image": "/projects/anonymous.png",
-        "link": "https://anonymous-by-faizan.vercel.app/"
-      },
-      {
-        "id": 3,
-        "title": "Next MongoDB",
-        "slug": "nextmongodb",
-        "description": "A Next.js app with MongoDB and Tailwind CSS that dynamically retrieves the user ID using square brackets in the URL.",
-        "image": "/projects/mongo_1.png",
-        "link": "https://nextmongodb-by-faizan.vercel.app/"
-      },
-      {
-        "id": 4,
-        "title": "Next appwrite",
-        "slug": "nextappwrite",
-        "description": "A Next.js and Appwrite-powered app with Context API, complex routing, and Tailwind CSS, ensuring seamless authentication and smooth navigation.",
-        "image": "/projects/appwrite_1.png",
-        "link": "https://nextappwrite-by-faizan.vercel.app/"
-      }
-    ]
-  }
-  
+  "Projects": [
+    {
+      "id": 1,
+      "title": "Music School",
+      "slug": "music-school",
+      "description": "Front-end App built with Next.js, Tailwind CSS, TypeScript and shadCN components.",
+      "image": "/projects/music-school.png",
+      "link": "https://music-school-by-faizan.vercel.app/"
+    },
+    {
+      "id": 2,
+      "title": "Anonymous",
+      "slug": "anonymous",
+      "description": "Full Stack Web App built with Next.js, Tailwind CSS, TypeScript and MongoDB.",
+      "image": "/projects/anonymous.png",
+      "link": "https://anonymous-by-faizan.vercel.app/"
+    },
+    {
+      "id": 3,
+      "title": "Next MongoDB",
+      "slug": "nextmongodb",
+      "description": "A Next.js app with MongoDB and Tailwind CSS that dynamically retrieves the user ID using square brackets in the URL.",
+      "image": "/projects/mongo_1.png",
+      "link": "https://nextmongodb-by-faizan.vercel.app/"
+    },
+    {
+      "id": 4,
+      "title": "Next appwrite",
+      "slug": "nextappwrite",
+      "description": "A Next.js and Appwrite-powered app with Context API, complex routing, and Tailwind CSS, ensuring seamless authentication and smooth navigation.",
+      "image": "/projects/appwrite_1.png",
+      "link": "https://nextappwrite-by-faizan.vercel.app/"
+    },
+    {
+      "id": 5,
+      "title": "Best Buy",
+      "slug": "bestbuy",
+      "description": "UI clone of bestbuy.com using Next.js, Tailwind CSS, TypeScript and shadcn",
+      "image": "/projects/bestbuy.png",
+      "link": "https://bestbuy-ui-by-faizan.vercel.app/"
+    },
+    {
+      "id": 6,
+      "title": "Next Redux Toolkit",
+      "slug": "nextreduxtoolkit",
+      "description": "A front-end app in Nex.js with Redux Toolkit, Tailwind CSS & TypeScript",
+      "image": "/projects/next-redux-toolkit.png",
+      "link": "https://next-redux-toolkit-by-faizan.vercel.app/"
+    }
+  ]
+}
