--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "framer-motion": "^12.0.0",
     "lucide-react": "^0.473.0",
     "mini-svg-data-uri": "^1.4.4",
-    "next": "15.1.5",
+    "next": "^15.3.1",
     "nodemailer": "^6.9.16",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
