--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -8,7 +8,7 @@
       "description": "Effortlessly Transcribe, Summarize, Translate, and Generate Creative Content with Unparalleled Ease - All Achievable with Just One Click.",
       "image": "/projects/transcripter.png",
       "link": "https://www.transcripter.co/",
-      "credentials": "Email: faizan.devstack@gmail.com, Password: Qwerty@123"
+      "credentials": "You can Sigup with your email!"
     },
     {
       "id": 2,
